--- a/src/Components/Cards/Cards.css
+++ b/src/Components/Cards/Cards.css
@@ -1,3 +1,7 @@
+.compaign-cards{
+  margin-top: 5px!important;
+}
+
 .Content-Card{
   background-color: white;
   border-radius: 16px !important;
@@ -24,17 +28,23 @@
   height: 48px;
   border-radius: 8px;
   flex-shrink: 0;
-  background: linear-gradient(135deg, rgba(0, 166, 62, 0.2) 0%, rgba(0, 166, 62, 0.05) 100%);
+}
+.iconbg .blue{
+  background: linear-gradient(90deg, #C7D8FE 0%, #F0F4FF 100%);
+}
+
+.iconbg .Green{
+background: linear-gradient(90deg, #D1EFDC 0%, #EDF9F1 100%);
 }
 
 .iconbg img{
-  width: 20px;
-  height: 20px;
+  width: 24px;
+  height: 24px;
   object-fit: contain;
 }
 
 .arrowbg{
-  background: linear-gradient(135deg, rgba(0, 166, 62, 0.2) 0%, rgba(0, 166, 62, 0.05) 100%);
+  background: linear-gradient(90deg, #D1EFDC 0%, #EDF9F1 100%);
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -69,14 +79,14 @@
 }
 
 .iconbgPink{
-background: linear-gradient(135deg, rgba(239, 68, 68, 0.2) 0%, rgba(239, 68, 68, 0.05) 100%);
+background: linear-gradient(to right, #FCDDDD 0%, #FFFAFA 100%);
 }
 .iconbgPink span{
   color: #ef4444 !important;
 }
 
 .iconbgPurple{
-background: linear-gradient(135deg, rgba(152, 16, 250, 0.2) 0%, rgba(152, 16, 250, 0.05) 100%) !important;
+  background: linear-gradient(to right, #ECD2FF 0%, #F8EFFF 100%)!important;
 }
 
 .arrowbg span{
