--- a/src/Components/Graph/PerformanceChart.css
+++ b/src/Components/Graph/PerformanceChart.css
@@ -1,14 +1,14 @@
 .performance-card {
   background: #ffffff;
   border-radius: 16px;
-  padding: 30px 30px 8px 30px!important;  
+  padding: 24px!important;  
   border: 0.8px solid rgba(0, 0, 0, 0.08);
+  margin-top: 19px;
 }
 
 .performance-title {
   font-size: 18px;
   font-weight: 700;
-  margin-left: 12px;
   color: var(--brand-HeadingColor);
 }
 
@@ -18,9 +18,9 @@
   position: relative;
 }
 
-.performance-chart {
-  width: 100%;
-  height: 100%;
+.performance-chart{
+  margin-top: 24px;
+  padding: 0 8px;
 }
 
 .insideLegend {
